--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
         function decoracion(p) {
             p.setDrawColor(255, 111, 176);
             p.setLineWidth(2);
-            p.rect(10, 10, 190, 277);
+            p.rect(10, 10, 190, 277); 
+            p.setDrawColor(220, 220, 220);
+            p.setLineWidth(0.5);
+            p.rect(13, 13, 184, 271)
             p.setFont("helvetica", "bold");
             p.setFontSize(20);
             p.text("Pinguicarta", 105, 25, { align: "center" });
